// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The level manager actions Matches the current snapshot 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <Styled(Button)
        disabled={false}
        id="btn-new"
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={false}
        id="btn-load"
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={false}
        id="btn-save"
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={false}
        id="btn-delete"
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={false}
        id="btn-copy"
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={false}
        id="btn-rename"
        onClick={[Function]}
      >
        <span>
          Rename
        </span>
      </Styled(Button)>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`The level manager actions Matches the current snapshot with disabled buttons 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <Styled(Button)
        disabled={true}
        id="btn-new"
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        id="btn-load"
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        id="btn-save"
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        id="btn-delete"
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        id="btn-copy"
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        id="btn-rename"
        onClick={[Function]}
      >
        <span>
          Rename
        </span>
      </Styled(Button)>
    </styled.li>
  </styled.ul>
</styled.div>
`;
